force-app/main/default/objects/Case/fields/AdjustReason__c.field-meta.xml
<CustomField>
    <fullName>AdjustReason__c</fullName>
    <description>Motivo do ajuste de saldo</description>
    <label>Motivo do Ajuste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>