force-app/main/default/objects/Case/fields/AdjustType__c.field-meta.xml
<CustomField>
    <fullName>AdjustType__c</fullName>
    <description>Tipo de Ajuste de Saldo – Crédito ou Débito </description>
    <label>Tipo de Ajuste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
                <label>Crédito</label>
            </value>
            <value>
                <fullName>Debt</fullName>
                <label>Débito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>