force-app/main/default/objects/Case/fields/AgentChannel__c.field-meta.xml
<CustomField>
    <fullName>AgentChannel__c</fullName>
    <label>Canal do Representante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Comercial - Lojas</fullName>
            </value>
            <value>
                <fullName>Comercial - Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>