force-app/main/default/objects/Case/fields/AutoImpugnation__c.field-meta.xml
<CustomField>
    <fullName>AutoImpugnation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impugnação Automática</label>
    <type>Checkbox</type>
</CustomField>