force-app/main/default/objects/Case/fields/BalanceType__c.field-meta.xml
<CustomField>
    <fullName>BalanceType__c</fullName>
    <description>Tipo de Saldo retornado pelo RM</description>
    <label>Tipo de Saldo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>