force-app/main/default/objects/Case/fields/BatchExecutionDateTime__c.field-meta.xml
<CustomField>
    <fullName>BatchExecutionDateTime__c</fullName>
    <description>[Rivanilson Costa - 11/06/2024 - J62 - BL15] Data/Hora de Execução do Batch. Ao iniciar o Processo Automático de Impugnação e verificar que o caso contempla a quantidade limite de dias para expiração, quando enviar ao OM as informações dos itens contemplados no Caso, deverá ser registrado a data/hora do processo.</description>
    <label>Data/Hora Execução Batch</label>
    <type>DateTime</type>
</CustomField>