force-app/main/default/objects/Case/fields/CallNumber__c.field-meta.xml
<CustomField>
    <fullName>CallNumber__c</fullName>
    <description>Para uso do HDE, deve ser preenchido com o numero do sistema da tratativa</description>
    <inlineHelpText>Você pode preencher esse campo para inserir o Número do Sistema de Tratativa</inlineHelpText>
    <label>Número do Chamado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>