force-app/main/default/objects/Case/fields/CaseAssociatedPhone__c.field-meta.xml
<CustomField>
    <fullName>CaseAssociatedPhone__c</fullName>
    <label>Linhas Associadas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>