force-app/main/default/objects/Case/fields/CaseCloseType__c.field-meta.xml
<CustomField>
    <fullName>CaseCloseType__c</fullName>
    <label>Tipo de Fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Improcedente - Não executado</fullName>
            </value>
            <value>
                <fullName>2.Procedente - Executado Escalonamento</fullName>
            </value>
            <value>
                <fullName>3.Procedente - Executado sem Escalonamento</fullName>
            </value>
            <value>
                <fullName>4.Procedente - Não executado</fullName>
            </value>
            <value>
                <fullName>Improcedente - Não executado</fullName>
            </value>
            <value>
                <fullName>Procedente - Executado Escalonamento</fullName>
            </value>
            <value>
                <fullName>Procedente - Executado sem Escalonamento</fullName>
            </value>
            <value>
                <fullName>Procedente - Não executado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>