force-app/main/default/objects/Case/fields/CaseComplexityReason__c.field-meta.xml
<CustomField>
    <fullName>CaseComplexityReason__c</fullName>
    <description>Lista de opções para complexidade do caso</description>
    <inlineHelpText>Motivos de baixa Complexidade, o caso é atribuído para o operador que criou o chamado. 
Motivos de Alta Complexidade, o caso é enviado para uma fila para tratativa dos Guardiões</inlineHelpText>
    <label>Complexidade do caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motivos de baixa Complexidade</fullName>
                <default>true</default>
                <label>Motivos de Baixa Complexidade</label>
            </value>
            <value>
                <fullName>Motivos de Alta Complexidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>