force-app/main/default/objects/Case/fields/CaseCreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>CaseCreatedByMe__c</fullName>
    <formula>IF(CreatedById = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chamado criado por mim</label>
    <type>Checkbox</type>
</CustomField>