force-app/main/default/objects/Case/fields/CaseDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseDocumentNumber__c</fullName>
    <formula>Account.DocumentNumberFormated__c</formula>
    <label>Número do Documento</label>
    <type>Text</type>
</CustomField>