force-app/main/default/objects/Case/fields/CaseFeedback__c.field-meta.xml
<CustomField>
    <fullName>CaseFeedback__c</fullName>
    <label>Retorno ao Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contato Telefônico</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Sem Retorno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>