force-app/main/default/objects/Case/fields/CaseNumberLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>CaseNumberLegacySystem__c</fullName>
    <externalId>true</externalId>
    <label>Número do Caso do Sistema Origem</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>