force-app/main/default/objects/Case/fields/CaseOwnerFormula__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerFormula__c</fullName>
    <formula>IF(ISBLANK(Owner:User.Id), Owner:Queue.QueueName , Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName &amp; &quot; - &quot; &amp; Owner:User.Alias)</formula>
    <label>Proprietário do chamado</label>
    <type>Text</type>
</CustomField>