force-app/main/default/objects/Case/fields/CaseTicketNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseTicketNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Número do Bilhete interligado ao Caso.</description>
    <label>Número do Bilhete</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>