force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categoria do caso</description>
    <label>Categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>