force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Origem do caso, pode ser via App Vivo, Call Center ou Lojas</description>
    <label>Canal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>