force-app/main/default/objects/Case/fields/CloseDescription__c.field-meta.xml
<CustomField>
    <fullName>CloseDescription__c</fullName>
    <label>Descrição do Fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseCloseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Guardião</fullName>
            </value>
            <value>
                <fullName>1.Supervisão</fullName>
            </value>
            <value>
                <fullName>2.Backoffice</fullName>
            </value>
            <value>
                <fullName>2.Gerente</fullName>
            </value>
            <value>
                <fullName>2.Loja</fullName>
            </value>
            <value>
                <fullName>2.Outra Área</fullName>
            </value>
            <value>
                <fullName>2.Performance</fullName>
            </value>
            <value>
                <fullName>2.Supervisão</fullName>
            </value>
            <value>
                <fullName>3.Guardião</fullName>
            </value>
            <value>
                <fullName>3.Operador Follow Up</fullName>
            </value>
            <value>
                <fullName>3.Supervisão</fullName>
            </value>
            <value>
                <fullName>4.Guardião</fullName>
            </value>
            <value>
                <fullName>4.Operador Follow Up</fullName>
            </value>
            <value>
                <fullName>4.Supervisão</fullName>
            </value>
            <value>
                <fullName>Operador Follow Up</fullName>
            </value>
            <value>
                <fullName>Guardião</fullName>
            </value>
            <value>
                <fullName>Supervisão</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Outra Área</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Automação Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>