force-app/main/default/objects/Case/fields/CloseDetail__c.field-meta.xml
<CustomField>
    <fullName>CloseDetail__c</fullName>
    <label>Detalhe do Fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CloseDescription__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Dados incorretos/divergentes</fullName>
            </value>
            <value>
                <fullName>1.Produto inativo</fullName>
            </value>
            <value>
                <fullName>1.Solicitação fora da regra</fullName>
            </value>
            <value>
                <fullName>2.Dentro do prazo inicial</fullName>
            </value>
            <value>
                <fullName>2.Fora do prazo inicial</fullName>
            </value>
            <value>
                <fullName>3.1.Dentro do prazo inicial</fullName>
            </value>
            <value>
                <fullName>3.1.Fora do prazo inicial</fullName>
            </value>
            <value>
                <fullName>3.2.Dentro do prazo inicial</fullName>
            </value>
            <value>
                <fullName>3.2.Fora do prazo inicial</fullName>
            </value>
            <value>
                <fullName>4.Chamado duplicado</fullName>
            </value>
            <value>
                <fullName>Chamado duplicado</fullName>
            </value>
            <value>
                <fullName>Dados incorretos/divergentes</fullName>
            </value>
            <value>
                <fullName>Dentro do prazo inicial</fullName>
            </value>
            <value>
                <fullName>Fora do prazo inicial</fullName>
            </value>
            <value>
                <fullName>Produto inativo</fullName>
            </value>
            <value>
                <fullName>Solicitação fora da regra</fullName>
            </value>
            <value>
                <fullName>Novo Chamado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>