force-app/main/default/objects/Case/fields/ClosingComment__c.field-meta.xml
<CustomField>
    <fullName>ClosingComment__c</fullName>
    <label>Comentário do Fechamento</label>
    <type>TextArea</type>
</CustomField>