force-app/main/default/objects/Case/fields/Closure__c.field-meta.xml
<CustomField>
    <fullName>Closure__c</fullName>
    <label>Fechamento</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>