force-app/main/default/objects/Case/fields/ClosureLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>ClosureLegacySystem__c</fullName>
    <label>Sistema Origem Fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>