force-app/main/default/objects/Case/fields/ClosureMapping__c.field-meta.xml
<CustomField>
    <fullName>ClosureMapping__c</fullName>
    <label>Interação Sistema Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>