force-app/main/default/objects/Case/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Observação</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>