force-app/main/default/objects/Case/fields/ComplainedAsset__c.field-meta.xml
<CustomField>
    <fullName>ComplainedAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Para uso do HDE</description>
    <inlineHelpText>Terminal, TV ou Banda Larga</inlineHelpText>
    <label>Produto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O produto adicionado está incorreto ou não está relacionado ao cliente.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Asset.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>