force-app/main/default/objects/Case/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Contexto</label>
    <length>150</length>
    <type>Text</type>
</CustomField>