force-app/main/default/objects/Case/fields/CreatorEnrollmentRE__c.field-meta.xml
<CustomField>
    <fullName>CreatorEnrollmentRE__c</fullName>
    <formula>IF(ISBLANK(CreatedBy.Login__c), CreatedBy.Alias, CreatedBy.Login__c)</formula>
    <label>Matrícula/RE do Criador do Chamado</label>
    <type>Text</type>
</CustomField>