force-app/main/default/objects/Case/fields/CriticalComment__c.field-meta.xml
<CustomField>
    <fullName>CriticalComment__c</fullName>
    <label>Detalhes da Priorização</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>