force-app/main/default/objects/Case/fields/CurrentGroup__c.field-meta.xml
<CustomField>
    <fullName>CurrentGroup__c</fullName>
    <label>Grupo Atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>