force-app/main/default/objects/Case/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <label>Usuário Atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>