force-app/main/default/objects/Case/fields/CustomerCloseSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>CustomerCloseSatisfaction__c</fullName>
    <label>Satisfação do Fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubDetailService__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2.Cliente insatisfeito</fullName>
            </value>
            <value>
                <fullName>2.Cliente satisfeito</fullName>
            </value>
            <value>
                <fullName>3.Cliente insastifeito</fullName>
            </value>
            <value>
                <fullName>3.Cliente satisfeito</fullName>
            </value>
            <value>
                <fullName>Cliente insastifeito</fullName>
            </value>
            <value>
                <fullName>Cliente não satisfeito</fullName>
                <isActive>false</isActive>
                <label>Cliente não satisfeito</label>
            </value>
            <value>
                <fullName>Cliente satisfeito</fullName>
            </value>
            <value>
                <fullName>Contato com sucesso  Telefone</fullName>
            </value>
            <value>
                <fullName>Contato com sucesso WhatsApp</fullName>
            </value>
            <value>
                <fullName>Contato sem sucesso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>