force-app/main/default/objects/Case/fields/CustomerInteractionId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associação do caso com um protocolo (Customer Interaction) pai</description>
    <label>Protocolo Pai</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Casos Protocolo</relationshipLabel>
    <relationshipName>CaseProtocol</relationshipName>
    <type>Lookup</type>
</CustomField>