force-app/main/default/objects/Case/fields/CustomerInteractionTopic__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interação</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_cmt__CustomerInteractionTopic__c.InteractionNumberInternal__c</field>
            <operation>equals</operation>
            <valueField>vlocity_cmt__CustomerInteractionTopic__c.InteractionNumberInternal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_cmt__CustomerInteractionTopic__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>