force-app/main/default/objects/Case/fields/CustomerInteractionTopicTree__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionTopicTree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Árvore de Palitagem</label>
    <referenceTo>CustomerInteractionTopicTree__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>