force-app/main/default/objects/Case/fields/CustomerMoodRating__c.field-meta.xml
<CustomField>
    <fullName>CustomerMoodRating__c</fullName>
    <description>Informação da temperatura do cliente durante o atendimento</description>
    <inlineHelpText>Temperatura do cliente - informar se o cliente está irritado: sim ou não</inlineHelpText>
    <label>Cliente Irritado no Atendimento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
                <default>true</default>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>