force-app/main/default/objects/Case/fields/CustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfile__c</fullName>
    <formula>Account.CustomerProfileListView__c</formula>
    <label>Perfil do cliente</label>
    <type>Text</type>
</CustomField>