force-app/main/default/objects/Case/fields/CustomerProfileText__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileText__c</fullName>
    <description>Campo utilizado para apresentar o perfil do cliente em texto.</description>
    <formula>Account.CustomerProfileText__c</formula>
    <label>Perfil do Cliente Texto</label>
    <type>Text</type>
</CustomField>