force-app/main/default/objects/Case/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Para uso do HDE, trás o segmento do cliente, informação que está no objeto Account</description>
    <formula>Text(Account.CustomerSegment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento do Cliente</label>
    <type>Text</type>
</CustomField>