force-app/main/default/objects/Case/fields/CustomerServiceReason__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceReason__c</fullName>
    <description>Campo usado no HDE, atrelado ao grupo do atendente e usado no mapeamento do HDE DE PARA para classificação do chamado como Alta complexidade e crítico</description>
    <label>Motivo do atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ª via de Nota Fiscal</fullName>
            </value>
            <value>
                <fullName>Acompanhamento de Técnico Fixa</fullName>
            </value>
            <value>
                <fullName>Agenda técnica não cumprida</fullName>
            </value>
            <value>
                <fullName>Alocação de fundos Kenan</fullName>
            </value>
            <value>
                <fullName>Análise/Suspeita de Fraude</fullName>
            </value>
            <value>
                <fullName>Análise de Cobertura</fullName>
            </value>
            <value>
                <fullName>Análise de Cobertura Condomínio</fullName>
            </value>
            <value>
                <fullName>Análise de crédito para mudança de Plano</fullName>
            </value>
            <value>
                <fullName>Análise de Retirada de Fidelidade</fullName>
            </value>
            <value>
                <fullName>Ativação de E-Sim</fullName>
            </value>
            <value>
                <fullName>Ativação de serviço (falha sistêmica)</fullName>
            </value>
            <value>
                <fullName>Atraso na entrega de controle remoto</fullName>
            </value>
            <value>
                <fullName>Baixa de Pagto / Envio de Comprovante / Religue</fullName>
            </value>
            <value>
                <fullName>Biometria Documental</fullName>
            </value>
            <value>
                <fullName>Chamador diferente binado p/ troca de número</fullName>
            </value>
            <value>
                <fullName>Cliente reindente em contestação</fullName>
            </value>
            <value>
                <fullName>Cliente vai pensar</fullName>
            </value>
            <value>
                <fullName>Cliente Vivo 1</fullName>
            </value>
            <value>
                <fullName>Contestação Kenan</fullName>
            </value>
            <value>
                <fullName>Contestação por Retificação acima de 1 Fatura</fullName>
            </value>
            <value>
                <fullName>Contestação Próximo Ciclo</fullName>
            </value>
            <value>
                <fullName>Contestação que seja necessário ouvir gravação</fullName>
            </value>
            <value>
                <fullName>Contrato - Locação</fullName>
            </value>
            <value>
                <fullName>Correção Causa Raiz - Contestação</fullName>
            </value>
            <value>
                <fullName>Correção de cadastro Siebel</fullName>
            </value>
            <value>
                <fullName>Correção de SubSegmento (PJ/PF)</fullName>
            </value>
            <value>
                <fullName>Dados de Oferta/Valores Divergentes</fullName>
            </value>
            <value>
                <fullName>Desbloqueio Linha/Aparelho</fullName>
            </value>
            <value>
                <fullName>Desconto Oferta Totalizadora</fullName>
            </value>
            <value>
                <fullName>Desmembramento de contas (Pós Pago - NEXT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>