force-app/main/default/objects/Case/fields/CustomerServiceType__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceType__c</fullName>
    <label>Tipo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BKO</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Demais Motivos</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Problema Sistêmico</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Temas Críticos</fullName>
            </value>
            <value>
                <fullName>Cadastral</fullName>
            </value>
            <value>
                <fullName>Falha Sistêmica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>