force-app/main/default/objects/Case/fields/DateHourWindow__c.field-meta.xml
<CustomField>
    <fullName>DateHourWindow__c</fullName>
    <label>Data/Hora Janela</label>
    <type>DateTime</type>
</CustomField>