force-app/main/default/objects/Case/fields/DateTimeAdjust__c.field-meta.xml
<CustomField>
    <fullName>DateTimeAdjust__c</fullName>
    <description>Data/Hora do Ajuste de Saldo, após recebimento de sucesso pelo RM</description>
    <label>Data/Hora do Ajuste</label>
    <type>DateTime</type>
</CustomField>