force-app/main/default/objects/Case/fields/DateTimeStatusChanged__c.field-meta.xml
<CustomField>
    <fullName>DateTimeStatusChanged__c</fullName>
    <description>Este campo deve ser atualizado sempre que o Status do caso for alterado. Com isto será possível verificar quanto tempo o caso está no mesmo Status.</description>
    <label>Data e Hora  Alteração de Status</label>
    <type>DateTime</type>
</CustomField>