force-app/main/default/objects/Case/fields/DestinyCell__c.field-meta.xml
<CustomField>
    <fullName>DestinyCell__c</fullName>
    <label>Célula Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>