force-app/main/default/objects/Case/fields/DisputeValue__c.field-meta.xml
<CustomField>
    <fullName>DisputeValue__c</fullName>
    <description>[Rivanilson Costa - 11/06/2024 - J62 - BL15] Valor dos Itens da Contestação.</description>
    <label>Valor Contestação</label>
    <summarizedField>DisputedItem__c.DisputedValue__c</summarizedField>
    <summaryForeignKey>DisputedItem__c.CaseId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>