force-app/main/default/objects/Case/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <formula>Account.DocumentNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>