force-app/main/default/objects/Case/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>Número do Documento</description>
    <label>Número do Documento</label>
    <length>60</length>
    <type>Text</type>
</CustomField>