force-app/main/default/objects/Case/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <formula>TEXT(Account.DocumentType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Documento</label>
    <type>Text</type>
</CustomField>