force-app/main/default/objects/Case/fields/DonorSpid__c.field-meta.xml
<CustomField>
    <fullName>DonorSpid__c</fullName>
    <label>Operadora Doadora</label>
    <length>40</length>
    <type>Text</type>
</CustomField>