force-app/main/default/objects/Case/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>IF(
    ISNULL(LastActivityDate__c),



  IF(
        Weekday(DATEVALUE(CreatedDate ) + (24/24)) = 7,
            CreatedDate + (72/24),
            IF(
                Weekday(DATEVALUE(CreatedDate ) + (24/24)) = 1,
                    CreatedDate + (48/24),
                    CreatedDate +1)),


   LastActivityDate__c)</formula>
    <label>Data de Vencimento</label>
    <type>DateTime</type>
</CustomField>