force-app/main/default/objects/Case/fields/endDateWindow__c.field-meta.xml
<CustomField>
    <fullName>endDateWindow__c</fullName>
    <label>Data Final da Janela</label>
    <type>DateTime</type>
</CustomField>