force-app/main/default/objects/Case/fields/EnrollmentRE__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentRE__c</fullName>
    <formula>IF(ISBLANK(Owner:User.Login__c), Owner:User.Alias, Owner:User.Login__c)</formula>
    <label>Matrícula/RE</label>
    <type>Text</type>
</CustomField>