force-app/main/default/objects/Case/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <label>Descrição do Erro</label>
    <type>TextArea</type>
</CustomField>