force-app/main/default/objects/Case/fields/FinalSLA__c.field-meta.xml
<CustomField>
    <fullName>FinalSLA__c</fullName>
    <description>Para uso do HDE, campo auxiliar do campo Data Final de Tratativa, informa o SLA final do caso</description>
    <formula>IF(OR(RecordType.DeveloperName = &apos;CommunityOuvidoriaProcessesEscalation&apos;,RecordType.DeveloperName = &apos;OuvidoriaProcessesEscalation&apos;),&apos;10 DC&apos;, &apos;1 DU&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Final</label>
    <type>Text</type>
</CustomField>