force-app/main/default/objects/Case/fields/FirstActivityDate__c.field-meta.xml
<CustomField>
    <fullName>FirstActivityDate__c</fullName>
    <label>Data da Primeira Atividade</label>
    <type>DateTime</type>
</CustomField>