force-app/main/default/objects/Case/fields/FormName__c.field-meta.xml
<CustomField>
    <fullName>FormName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Formulário</label>
    <type>Text</type>
</CustomField>