force-app/main/default/objects/Case/fields/FormulaLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FormulaLastModifiedDate__c</fullName>
    <description>Campo criado temporariamente devido ao erro na obtenção do Case.LastModifiedDate pelo DataRaptor valGetInteractionTopicDetails (Case SF 44319158). O campo será retirado quando a solução for disponibilizada pela Salesforce.</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>